--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>myGuest App</title>
+  <title>myGuest</title>
   <link href="output.css" rel="stylesheet">
+  <link type="image/png" sizes="96x96" rel="icon" href="favicon.ico">
+
 </head>
 <body>
   <div id="root"></div>
