Updated apple touch icon

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>myGuest</title>
   <link href="output.css" rel="stylesheet">
   <link type="image/png" sizes="96x96" rel="icon" href="favicon.ico">
+  <link type="image/png" sizes="96x96" rel="apple-touch-icon" href="favicon.ico">
 
 </head>
 <body>
